--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" tools:layout_editor_absoluteY="149dp"
             tools:layout_editor_absoluteX="155dp" android:id="@+id/button"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteY="521dp"
+            tools:layout_editor_absoluteX="161dp" android:id="@+id/button2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
